# TogglTrackMcp

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/toggl_track_mcp/: __init__.py  __main__.py  server.py
src/toggl_track_mcp/api/: __init__.py  client.py  clients.py  projects.py  reports.py  tags.py  tasks.py  time_entries.py  workspaces.py
src/toggl_track_mcp/tools/: clients.py  projects.py  reports.py  tags.py  tasks.py  time_entries.py  workspaces.py
tests/: conftest.py  test_client.py  test_clients.py  test_projects.py  test_reports.py  test_tags.py  test_tasks.py  test_time_entries.py  test_workspaces.py
