[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toggl-track-mcp"
version = "0.1.0"
description = "MCP server for Toggl Track time tracking — full CRUD for time entries, projects, clients, tags, tasks, and reports"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "toggl", "time-tracking", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
]

[project.scripts]
toggl-track-mcp = "toggl_track_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/toggl_track_mcp"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]
